--- a/index.html
+++ b/index.html
@@ -123,23 +123,23 @@
               <div class="staff-item-content">
                 <h3>Mark Guerrero</h3>
                 <p>Product designer</p>
-                <ul class="staff-social-list">
-                  <li class="staff-social-list-item">
+                <ul class="social-list">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
-                  <li class="staff-social-list-item">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
-                  <li class="staff-social-list-item">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
-                  <li class="staff-social-list-item">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -152,23 +152,23 @@
               <div class="staff-item-content">
                 <h3>Tom Ford</h3>
                 <p>Frontend developer</p>
-                <ul class="staff-social-list">
-                  <li class="staff-social-list-item">
+                <ul class="social-list">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
-                  <li class="staff-social-list-item">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
-                  <li class="staff-social-list-item">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
-                  <li class="staff-social-list-item">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -181,23 +181,23 @@
               <div class="staff-item-content">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
-                <ul class="staff-social-list">
-                  <li class="staff-social-list-item">
+                <ul class="social-list">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
-                  <li class="staff-social-list-item">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
-                  <li class="staff-social-list-item">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
-                  <li class="staff-social-list-item">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -210,23 +210,23 @@
               <div class="staff-item-content">
                 <h3>Daniel Wilson</h3>
                 <p>UI designer</p>
-                <ul class="staff-social-list">
-                  <li class="staff-social-list-item">
+                <ul class="social-list">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
-                  <li class="staff-social-list-item">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
-                  <li class="staff-social-list-item">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
-                  <li class="staff-social-list-item">
+                  <li class="social-list-item">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -338,14 +338,41 @@
     </main>
 
     <footer>
-      <div class="container">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div>
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div>
+          <h4 class="social-title">Social media</h4>
+          <ul class="social-list">
+            <li class="social-list-item">
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li class="social-list-item">
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li class="social-list-item">
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="social-list-item">
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
